- Fixed: Notification translations
- Implemented: Lighting2, when a Group Off is received, all switched with the same ID will be set to 'Off' (internally)
- Implemented: Z-Wave Temp/Humidity sensor
- Changed: Wind Station LaCrosse WS2300 will again display 'gust'
- Changed: WindType5 (WS2300) will not display speed in widgets
- Implemented: Lux Meter Type (Currently used by Z-Wave hardware)

Version 1.0.666 (May 28th 2013)
- Implemented: Settings, Doorbell could be send as 'Group On' or 'On' command
- Fixed: Power Usage Graph, Problem with other devices then P1 Smart Meter
- Implemented: Settings, Option to specify P1 Smart Meter Type (with/without Decimals)
- Implemented: User Editor
- Implemented: Settings Email, option to send camera snapshots as attachment
- Implemented: Enabled Timer support for Push On/Off light/switch devices
- Implemented: 1-Wire sensor support (temperature at the moment, w1-gpio, w1-therm) see Wiki pages
- Implemented: 1-Wire OWFS sensor support, see Wiki pages
- Implemented: Clicking on the version number now displays the history file
- Fixed: Data for the last selected day in the custom short term graph was not shown
- Changed: 1-Wire OWFS, ignoring ID=0 when temp is also 0
- Fixed: Light/Switch type 'Door Lock' on Lights tab showed initially a wrong icon for the 'Open' state
- Fixed: Settings Email, now possible to send a test email without username/password
- Implemented: Option to enable/disable menus from application settings
- Implemented: Option to request list of all timers via JSON (gettimerlist)
- Implemented: Option to send Notifications (Setup -> More options)
- Implemented: Option to backup database (Setup -> Application Settings left menu)
- Fixed: notification.png now included in SVN (caused browser cache problems)
- Changed: Door bells do not display a status message anymore
- Changed: Web users not loaded when no Application Settings admin account is specified